Entrega Primer desafio BOOTSTRAP DEFINITIVO

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               
-              <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                   <li class="nav-item  ">
                     <a class="navbar nav__menu--enlace " aria-current="page" href="index.html">Inicio</a>
                   </li>
