--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <title>Contacto</title>
     <link rel="shortcut icon" href="img/logo.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos/estilo.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -32,10 +32,10 @@
                   Productos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item h5 text-primary fst-italic" href="productos.html">Seguro Automotor</a></li>
-                  <li><a class="dropdown-item h5 text-primary" href="productos.html">Seguro Motocicleta</a></li>
+                  <li><a class="dropdown-item h5 text-primary fst-italic" href="automotor.html">Seguro Automotor</a></li>
+                  <li><a class="dropdown-item h5 text-primary" href="motocicleta.html">Seguro Motocicleta</a></li>
                   
-                  <li><a class="dropdown-item h5 text-primary" href="productos.html">Seguro Bicicleta</a></li>
+                  <li><a class="dropdown-item h5 text-primary" href="bicicleta.html">Seguro Bicicleta</a></li>
                 </ul>
               </li>
               <li class="nav-item">
