--- a/productos.html
+++ b/productos.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos/estilo.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <header class="header">
@@ -34,10 +34,10 @@
                   Productos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item h5 text-primary fst-italic" href="productos.html">Seguro Automotor</a></li>
-                  <li><a class="dropdown-item h5 text-primary" href="productos.html">Seguro Motocicleta</a></li>
+                  <li><a class="dropdown-item h5 text-primary fst-italic" href="automotor.html">Seguro Automotor</a></li>
+                  <li><a class="dropdown-item h5 text-primary" href="motocicleta.html">Seguro Motocicleta</a></li>
                   
-                  <li><a class="dropdown-item h5 text-primary" href="productos.html">Seguro Bicicleta</a></li>
+                  <li><a class="dropdown-item h5 text-primary" href="bicicleta.html">Seguro Bicicleta</a></li>
                 </ul>
               </li>
               <li class="nav-item">
