Tercera Entrega de Proyecto Final

--- a/contacto.html
+++ b/contacto.html
@@ -54,7 +54,7 @@
       </nav>
   </header>
     
-    <main>
+    <main class="contacto">
             <form class="formulario" action="" method="GET">
                 <label class="formulario__titulo" for="nombre">Nombre: </label>
                 <input class="formulario__titulo--campo" type="text" id="nombre">
