--- a/cotizacion.html
+++ b/cotizacion.html
@@ -53,7 +53,7 @@
         </div>
       </nav>
   </header>
-
+  <main class="cotizacion">
     <form class="formulario" action="" method="GET">
                 <h1 class="formulario__h1">Ingresá los datos de tu vehículo</h1>
                                     
@@ -92,6 +92,7 @@
                 <input class="formulario__boton" type="submit" value="Solicitar Cotizacion">
                 
     </form>
+  </main>
     <footer class="footer">
       <p class="footer__parrafo">Nuestras Redes Sociales</p>
       <a class="m-5" href="https://www.facebook.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
