--- a/nosotros.html
+++ b/nosotros.html
@@ -54,7 +54,7 @@
         </div>
       </nav>
   </header>
-    <main>
+    <main class="nosotros">
         
         <div class="parrafo">
             <h3>Nosotros</h3><br> 
