Agregando SEO al proyecto

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta name="description" content="LEP Seguros es una empresa dedicada al negocio de seguros, especialistas en análisis de riesgos">
+    <meta name="keywords"  content="seguros, automotor, motocicleta, bicibleta, seguros generales, terceros completo, terceros completo full, robo, hurto ">
     <title>Nosotros</title>
     <link rel="shortcut icon" href="img/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
