--- a/automotor.html
+++ b/automotor.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="LEP Seguros es una empresa dedicada al negocio de seguros, especialistas en análisis de riesgos">
+    <meta name="keywords"  content="seguros, automotor, motocicleta, bicibleta, seguros generales, terceros completo, terceros completo full, robo, hurto ">
     <title>Seguro automotor</title>
     <link rel="shortcut icon" href="img/logo.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
