Entrega Proyecto Final

--- a/motocicleta.html
+++ b/motocicleta.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid ">
-              <a href="index.html"><img class="logo__img" src="img/logo.png" alt=""></a>
+              <a href="index.html"><img class="logo__img" src="img/logo.png" alt="Logo Lep"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -117,7 +117,7 @@
                         <p><strong>Extensión de cobertura al Exterior para motocicleta:</strong></p>
                         <ul>
                      
-                        <li> Sin costo adicional para países limítrofes y con límite detallado en póliza.</p>
+                        <li> Sin costo adicional para países limítrofes y con límite detallado en póliza. </p>
                         </li>
                     </ul>
 
