--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid ">
-          <a href="index.html"><img class="logo__img" src="img/logo.png" alt=""></a>
+          <a href="index.html"><img class="logo__img" src="img/logo.png" alt="Logo Lep"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -79,7 +79,7 @@
                     <li>Somos transparentes en los negocios que manejamos.</li>
                 </ul><br>
             <h3>Nuestra misión</h3><br>
-                <p>Brindamos protección a lo que usted considera valioso</p>
+                <p>Brindamos protección a lo que usted considera valioso </p>
         </div>
 
     </main>
