--- a/productos.html
+++ b/productos.html
@@ -19,7 +19,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid ">
-          <a href="index.html"><img class="logo__img" src="img/logo.png" alt="Logo Lepvvvvvvv"></a>
+          <a href="index.html"><img class="logo__img" src="img/logo.png" alt="Logo Lep"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,28 +27,28 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0 nav ">
               <li class="nav-item  ">
-                <a class=" nav__menu--enlace " aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
               </li>
               
               <li class="nav-item dropdown">
-                <a class="dropdown-toggle  nav__menu--enlace" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="dropdown-toggle nav-link active" href="productos.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Productos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item h5 text-primary fst-italic" href="automotor.html">Seguro Automotor</a></li>
-                  <li><a class="dropdown-item h5 text-primary" href="motocicleta.html">Seguro Motocicleta</a></li>
+                  <li><a class="dropdown-item nav-link h5 text-primary fst-italic" href="automotor.html">Seguro Automotor</a></li>
+                  <li><a class="dropdown-item nav-link h5 text-primary" href="motocicleta.html">Seguro Motocicleta</a></li>
                   
-                  <li><a class="dropdown-item h5 text-primary" href="bicicleta.html">Seguro Bicicleta</a></li>
+                  <li><a class="dropdown-item nav-link h5 text-primary" href="bicicleta.html">Seguro Bicicleta</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav__menu--enlace" href="cotizacion.html">Pedi tu cotizacion</a>
+                <a class="nav-link " href="cotizacion.html">Pedi tu cotizacion</a>
               </li>
               <li class="nav-item">
-                <a class="nav__menu--enlace" href="nosotros.html">Nosotros</a>
+                <a class="nav-link " href="nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav__menu--enlace" href="contacto.html">Contacto</a>
+                <a class="nav-link " href="contacto.html">Contacto</a>
               </li>
             </ul>
           </div>
